{
    "name": "InputActions",
    "maps": [
        {
            "name": "Debug",
            "id": "1fbf91ac-0e98-4dd0-b7ca-c10d9a3a8467",
            "actions": [
                {
                    "name": "MousePick",
                    "type": "Button",
                    "id": "943c5010-978f-4244-a218-b7350c88dabe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "891bc54a-b835-46a5-9f72-5d4a378abd02",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Button With One Modifier",
                    "id": "9d2c7225-3b74-44ad-a65a-3b8ac2d35306",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "bba56ec1-132f-4225-89bf-7db6c23643b1",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "82b4be2b-97d7-44cd-87d1-246ea7d39bd0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d213ca46-921b-4398-99e5-7718337872ce",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "0b2b7940-d008-4a8c-9b46-58259dbe2f3c",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "e974a6ac-d91d-445d-b733-d73592ad2657",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6ee891f3-bb25-4773-9a34-da491ff079bd",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}